# comicfn2dict

./: .dockerignore  .eslintrc.cjs  .gitignore  .prettierignore  .remarkignore  Dockerfile  LICENSE  Makefile  NEWS.md  README.md  builder-requirements.txt  comicfn2dict.py  comicfn2dict.sh  docker-compose.yaml  eslint.config.js  package-lock.json  package.json  pyproject.toml
.circleci/: config.yml
comicfn2dict/: __init__.py  cli.py  comicfn2dict.py  log.py  parse.py  regex.py  unparse.py
tests/: __init__.py  comic_filenames.py  test_comicfn2dict.py  test_dict2comicfn.py
