[project]
authors = [{ name = "AJ Slater", email = "aj@slater.net" }]
license = { text = "GPL-3.0-only" }
requires-python = "<4.0,>=3.9"
dependencies = ["typing-extensions>=4.13.2"]
name = "comicfn2dict"
version = "0.2.5"
description = "Parse common comic filenames and return a dict of metadata attributes. Includes a cli."
readme = "README.md"
keywords = []
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
News = "https://github.com/ajslater/comicfn2dict/NEWS.md"
"Report Issues" = "https://github.com/ajslater/comicfn2dict/issues"
homepage = "https://github.com/ajslater/comicfn2dict"
repository = "https://github.com/ajslater/comicfn2dict"
documentation = "https://github.com/ajslater/comicfn2dict"

[project.scripts]
comicfn2dict = "comicfn2dict.cli:main"

[dependency-groups]
dev = [
  "basedpyright~=1.29.1",
  "codespell<3.0.0,>=2.1.0",
  "coverage[toml]<8.0,>=7.0",
  "deepdiff<9.0.0,>=8.0.1",
  "hatchling<2.0.0,>=1.27.0",
  "neovim<1.0.0,>=0.3.1",
  "pytest-cov<7.0.0,>=6.0.0",
  "pytest-gitignore<2.0,>=1.3",
  "toml-cli<1.0.0,>=0.7.0",
  "radon[toml]<7.0.0,>=6.0.1",
  "ruff<1.0.0,>=0.11.2",
  "types-python-dateutil<3.0.0,>=2.8.19",
  "vulture<3.0,>=2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["comicfn2dict", "tests"]
exclude = ["*/**/*~"]

[tool.basedpyright]
exclude = [
  "**/.*",
  "**/__pycache__",
  "**/node_modules",
  "dist",
  "test-results",
  "typings",
  "vulture_whitelist.py",
]
pythonVersion = "3.10"
failOnWarnings = false
reportAny = false
reportExplicitAny = false
reportImportCycles = true
reportIncompatibleUnannotatedOverride = true
reportMissingParameterType = false
reportMissingTypeArgument = false
reportPrivateUsage = false # ruff does this
reportUnannotatedClassAttribute = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnusedCallResult = false
reportUnusedParameter = false # ruff does this 
reportMissingTypeStubs = false

[tool.codespell]
skip = ".*,*~,./dist,./node_modules,./package.json,./package-lock.json,./uv.lock,./test-results"
builtin = 'clear,rare,code'
check-hidden = true
# Remove 'coverd' when this issue is resolved
# https://github.com/codespell-project/codespell/issues/1212
ignore-words-list = 'thead,ro,jupyter,coverd,searched,ws'

[tool.coverage.html]
directory = "test-results/coverage"

[tool.coverage.run]
source = ["comicfn2dict"]
branch = true
concurrency = ["multiprocessing"]
omit = [
  ".git/*",
  ".mypy_cache/*",
  ".pytest_cache/*",
  ".venv*/*",
  "*__pycache__*",
  "dist/*",
  "node_modules/*",
  "test-results/*",
  "typings/*",
]

[tool.pytest.ini_options]
addopts = """
    --junit-xml=test-results/pytest/results.xml
    -ra
    --strict-config
    --strict-markers
    --cov
    --cov-append
    --cov-report=html
    --cov-report=term
"""
junit_family = "xunit2"
testpaths = "tests"

[tool.radon]
exclude = "*~,.*,.*/*,__pycache__/*,dist/*,node_modules/*,test-results/*,typings/*"

[tool.ruff]
extend-exclude = ["**/.*", "**/__pycache__", "dist", "test-results", "typings"]
target-version = "py310"

[tool.ruff.lint]
extend-ignore = [
  "BLE001",  # catch bare exception
  "COM812",  # missing trailing comma
  "COM819",  # prohibit trailing comma
  "D203",    # blank line before class docstring
  "D206",    # formatted
  "D212",    # first line multi line docstring.
  "E111",    # formatted
  "E114",    # formatted
  "E117",    # over-indented
  "E501",    # 88 char line
  "FBT001",  # boolean params
  "ISC001",  # formatted
  "PERF203", # try block in loop
  "S101",    # assert
  "W191",    # formatted
]
extend-select = [
  "A",
  # "AIR",
  # "ANN",
  "ARG",
  "ASYNC",
  "B",
  "B9",
  "BLE",
  "C",
  "C4",
  "C90",
  "COM",
  # "CPY",
  "D",
  "DJ",
  # "DOC",
  "DTZ",
  "E",
  "EM",
  "ERA",
  "EXE",
  "F",
  "FA",
  # "FAST",
  "FBT",
  "FIX",
  "FLY",
  "FURB",
  # "G",
  "I",
  "ICN",
  "INP",
  "INT",
  "ISC",
  "LOG",
  # "PD",
  "PERF",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "PYI",
  # "Q", Formatted
  "N",
  # NPY,
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "SLF",
  "SLOT",
  "T10",
  "T20",
  "TCH",
  # "TD",
  "TID",
  "TRY",
  "UP",
  "W",
  "YTT",
]
external = ["V101"]
task-tags = ["TODO", "FIXME", "XXX", "http", "HACK"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["SLF001", "T201", "T203"]

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.vulture]
exclude = [
  "*/.*",
  "*/__pycache__*",
  "*/node_modules*",
  "dist/",
  "test-results/",
  "typings/",
]
min_confidence = 61
sort_by_size = true
